--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -400,6 +400,10 @@ ul.row {
     display: flex;
 }
 
+
+
+
+/* .nav .nav-item selector - Remove margin from here */
 .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
@@ -407,8 +411,8 @@ ul.row {
     letter-spacing: var(--nav-item-letter-spacing);
 }
 
-.nav .nav-item + .nav .nav-item {
-    margin: var(--nav-item-margin);
+.nav .nav-item+.nav-item {
+    margin-left: 1rem;
 }
 
 .nav .nav-link {
