--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -571,7 +571,7 @@ ul.row {
 
 /* Section ABOUT US */
 
-.section-aboout-us [class^="col-"] {
+.section-about-us [class^="col-"] {
     align-self: center;
 }
 
