--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -367,7 +367,7 @@ a:active {
 
 /* Grid
       ============================= */
-.row{
+.row {
     display: flex;
 }
 
@@ -559,13 +559,12 @@ ul.row {
     padding: 10rem 40rem 2rem 0;
 }
 
-/* Section Latest news ============================= */
-.section-latest-news .row{
+/* Section Latest news
+     ============================= */
+
+.section-latest-news .row {
     flex-direction: row-reverse;
 }
-
-
-
 
 /*** 4. CARD ***/
 
