--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -11,11 +11,6 @@
    ============================= */
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
-/* Variables
-   ============================= */
-
-
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%
@@ -112,12 +107,12 @@ select {
     text-transform: none
 }
 
-/* [type=button],
+[type=button],
 [type=reset],
 [type=submit],
 button {
     -webkit-appearance: button
-} */
+}
 
 [type=button]::-moz-focus-inner,
 [type=reset]::-moz-focus-inner,
@@ -167,7 +162,7 @@ textarea {
 }
 
 [type=search] {
-    /* -webkit-appearance: textfield; */
+    -webkit-appearance: textfield;
     outline-offset: -2px
 }
 
@@ -195,6 +190,9 @@ template {
 [hidden] {
     display: none
 }
+
+/* Variables
+   ============================= */
 
 :root {
     --color-primary: #D73953;
@@ -242,7 +240,6 @@ template {
 
     /** HEADER **/
     --header-padding: 4rem 0 0;
-
 
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -363,9 +360,6 @@ a:active {
 
 /* Grid
       ============================= */
-.row {
-    display: flex;
-}
 
 ul.row {
     margin: -1rem;
@@ -373,13 +367,16 @@ ul.row {
     list-style: none;
 }
 
+.row {
+    display: flex;
+}
 
 [class*='col-'] {
     margin: 1rem;
 }
 
 .col-1-3 {
-    width: calc((100%/3)-2rem);
+    width: calc((100% / 3) - 2rem);
 }
 
 .col-1-2 {
@@ -389,9 +386,6 @@ ul.row {
 /* Navbar
       ============================= */
 
-
-
-
 .nav {
     margin: 0;
     padding: 0;
@@ -400,10 +394,6 @@ ul.row {
     display: flex;
 }
 
-
-
-
-/* .nav .nav-item selector - Remove margin from here */
 .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
@@ -412,7 +402,13 @@ ul.row {
 }
 
 .nav .nav-item+.nav-item {
-    margin-left: 1rem;
+    margin: var(--nav-item-margin);
+}
+
+.nav .nav-link {
+    display: block;
+    padding: 0.5rem 0;
+    position: relative;
 }
 
 .nav .nav-link {
