--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -704,10 +704,12 @@ input[type="text"],input[type="email"]{
   padding-right: 3rem;
 }
 
-input[type="text"]:target,input[type="email"]:target,textarea:target{
-  border: .1rem solid var(--color-grey);
-  background-color: var(--color-light-grey);
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
+  border: 0.1rem solid var(--color-light-grey);
 }
+
 
 ::placeholder {
   font-style: italic;
