--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -758,7 +758,7 @@ textarea:focus {
   overflow: hidden;
 }
 
-.form-group:focus-within .form-group{
+.form-group:focus-within .form-help{
   max-height: 20rem;
   margin: .4rem 0 0;
 }
