--- a/form/06-styles.css
+++ b/form/06-styles.css
@@ -341,13 +341,13 @@ a:active {
 }
 
 .button-primary{
-  color: var(--color-white);
-  background-color: var(--color-primary);
+  color: var(--color-white);  
+  background: var(--color-primary);
 }
 
 .button-primary:hover{
   color: var(--color-primary);
-  background-color: var(--color-white);
+  background: var(--color-white);
 }
 
 /* Helpers
