--- a/sass_scss/1-color_variable.css
+++ b/sass_scss/1-color_variable.css
@@ -1,4 +1,8 @@
 /* Use varible for recurrent color */
-body, p {
+body {
+  color: #3D3D3D;
+}
+
+p {
   color: #3D3D3D;
 }/*# sourceMappingURL=1-color_variable.css.map */
