--- a/sass_scss/3-nested_tag.css
+++ b/sass_scss/3-nested_tag.css
@@ -1,7 +1,9 @@
+/* Task: No margin/padding on body, margin on p using variable */
 body {
   padding: 0;
   margin: 0;
 }
-body p {
+
+p {
   margin: 10px;
 }/*# sourceMappingURL=3-nested_tag.css.map */
