--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,10 +1,12 @@
+/* Task: No margin/padding on body, margin on p using variable */
+
 $marginText: 10px;
 
 body {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+}
 
-    p {
-        margin: $marginText;
-    }
+p {
+  margin: $marginText;
 }
