--- a/sass_scss/11-loop_photos.scss
+++ b/sass_scss/11-loop_photos.scss
@@ -1,7 +1,7 @@
-@use "11-photos" as photos;
+@use '11-photos' as photos;
 
-@each $name in photos.$listNames {
-    .photo-#{$name} {
-        background: image-url("photos/#{$name}.jpg") no-repeat;
-    }
+@each $name in photos.$list-names {
+  .photo-#{$name} {
+    background: image-url("photos/#{$name}.jpg") no-repeat;
+  }
 }
